[package]
name = "rookup-common"
description = "Common utilities used for the Rookup multiplexer and proxy, for internal use only"
edition = "2021"

[build-dependencies]
rookup-common-build = { path = "./rookup-common-build" }

[dependencies]
rookup-common-base = { path = "./rookup-common-base" }
thiserror = "2.0.12"
