[package]
name = "rookup"
description = "An unofficial (SourceMod) SourcePawn toolchain multiplexer"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["b0mbie"]

[dependencies]
rookup-common = { path = "../rookup-common" }
anyhow = "1.0.95"
clap = { version = "4.5.31", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["escape-html"] }
thiserror = "2.0.11"
ureq = "3.0.5"
zip = { version = "4.1.0", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "zstd"] }
flate2 = "1.0.35"
tar = "0.4.44"
clean-path = "0.2.1"
rustc-hash = "2.1.1"
